syntax = "proto3";

package issue_grpc;

option go_package = "grpc/issue_grpc";

service IssueService {
  rpc OnProjectCreated(CreateProjectRequest) returns (CreateProjectResponse);
}

message CreateProjectRequest {
  string projectId = 1;
}

message CreateProjectResponse {
  string response = 1;
}